# code-ai

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
.local/: npm_helper.py  test_npm_windows.py
docs/superpowers/plans/: 2026-03-21-profile-modes-and-proxy.md
docs/superpowers/specs/: 2026-03-21-profile-modes-and-proxy-design.md
src/code_ai/: cli.py  config.py  launcher.py  models.py  profiles.py
tests/: test_integration.py  test_launcher.py  test_models.py
